add mac address grabber

--- a/Receiver/platformio.ini
+++ b/Receiver/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = adafruit_qtpy_esp32c3
 framework = arduino
+monitor_speed = 115200
+monitor_rts = 0
+monitor_dtr = 0
+board_flags =
+   -DARDUINO_USB_MODE=1
+   -DARDUINO_USB_CDC_ON_BOOT=1
